besu/aws/modules/monitoring/security-groups.tf
#creating security group for monitoring
resource "aws_security_group" "monitoring_sg" {
  name        = "${var.vpc_name}_monitoring_sg"
  description = "${var.vpc_name}_monitoring_sg"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9090
    to_port     = 9090
    protocol    = "tcp"
    cidr_blocks = ["${var.vpc_cidr}"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
